Yeni sayfa eklendi ve diğer değişiklikler yapıldı

--- a/milina-html/contact.html
+++ b/milina-html/contact.html
@@ -66,9 +66,17 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="about.html">Hakkımızda</a>
                               </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="we-do.html">Ürünlerimiz</a>
-                              </li>
+                              <li class="nav-item dropdown">
+                                 <a class="nav-link dropdown-toggle" href="we-do.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                     Ürünlerimiz
+                                 </a>
+                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                     <a class="dropdown-item" href="we-do.html">Profesyonel Nail Art Fırça Seti</a>
+                                     <a class="dropdown-item" href="we-do.html">Jel Oje Kitleri</a>
+                                     <a class="dropdown-item" href="we-do.html">Ombre Sünger Seti</a>
+                                     <a class="dropdown-item" href="we-do.html">El ve Ayak Bombası</a>
+                                 </div>
+                             </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="pricing.html">Misyon-Vizyon&Değerlerimiz</a>
                               </li>
