--- a/milina-html/index.html
+++ b/milina-html/index.html
@@ -400,11 +400,11 @@
                <p><strong>Detaylar:</strong> Yeni sezon tırnak tasarımlarımızla sizlerleyiz!</p>
                <p>
                    <strong>PDF Dosyası:</strong>
-                   <a href="https://drive.google.com/file/d/1Z6Z74X1DxDm5JPorFmgMtRciFZtQw3GF/view" target="_blank">Yeni Sezon PDF</a>
+                   <a href="https://drive.google.com/file/d/1nHvAxG_5TTFc59KOCHQjtiTyemZ4bsme/view?usp=drive_link" target="_blank">Yeni Sezon PDF</a>
                </p>
                <p>
                    <strong>Word Dosyası:</strong>
-                   <a href="https://docs.google.com/document/d/1avjRCG_Itb36_WOLVYJRx8scJJtFQ1ZW/edit" target="_blank">Yeni Sezon Word</a>
+                   <a href="https://docs.google.com/document/d/1W3qLRfQ4H89bgZ3r5GTJwQvBY67x5_wK/edit?usp=drive_link&ouid=101712736870123859917&rtpof=true&sd=true" target="_blank">Yeni Sezon Word</a>
                </p>
                <p>
                   <strong>Resim:</strong>
