--- a/milina-html/birimlerimiz.html
+++ b/milina-html/birimlerimiz.html
@@ -172,7 +172,17 @@
                      <ul class="link_menu">
                         <li class="active"><a href="index.html">Anasayfa</a></li>
                         <li><a href="about.html"> Hakkımızda</a></li>
-                        <li><a href="we-do.html">Ürünlerimiz</a></li>
+                        <li class="nav-item dropdown">
+                           <a class="nav-link dropdown-toggle" href="we-do.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               Ürünlerimiz
+                           </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                               <a class="dropdown-item" href="we-do.html">Profesyonel Nail Art Fırça Seti</a>
+                               <a class="dropdown-item" href="we-do.html">Jel Oje Kitleri</a>
+                               <a class="dropdown-item" href="we-do.html">Ombre Sünger Seti</a>
+                               <a class="dropdown-item" href="we-do.html">El ve Ayak Bombası</a>
+                           </div>
+                       </li>
                         <li><a href="pricing.html">Misyon-Vizyon Değerlerimiz</a></li>
                         <li><a href="birimlerimiz.html">Birimlerimiz</a></li>
                         <li><a href="contact.html">İletişim</a></li>
